@@ -1,3 +1,9 @@
+2021-03-20  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/dependency/Resolver.java:
+	In addToClasspath(File...), test for logging artifacts before
+	adding to the classpath.
+
 2021-03-16  Allen D. Ball  <ball@hcf.dev>
 
 	* Added groovy and kotlin magics.
